# scarab

./: README.md
config/: .tmux.conf  99-scarab.rules  interfaces  wpa_supplicant.conf
doc/: Admin.md  CurrentIssues.md  ScarabGazebo.md  ScarabGmapping.md  ScarabSemanticSLAM.md  ScarabVicon.md  noetic_simulation.md
hfn/: CMakeLists.txt  package.xml
hfn/config/: map_params.yaml
hfn/include/hfn/: rosmap.hpp  traj_gen.h
hfn/launch/: scarab_wp.launch  sim.launch
hfn/scripts/: tf_posestamped_node.py
hfn/src/: hfn.cpp  hfn.hpp  map.c  rosmap.cpp  scarab_wp_node.cpp  traj_gen.cpp
kinematic_sim/: CMakeLists.txt
kinematic_sim/src/: kinematic_sim.cc
kr_traj_msgs/: CMakeLists.txt  package.xml
kr_traj_msgs/msg/: PolyTrajByBounds.msg  PolyTrajByCoeffs.msg
laser_odom/: CMakeLists.txt
laser_simulator/: package.xml
laser_simulator/src/: LaserSimulator.cc
mesh80211s/: CMakeLists.txt
mesh80211s/src/: station.c
roboclaw/: CMakeLists.txt
roboclaw/cfg/: Roboclaw.cfg  roboclaw.yaml
roboclaw/msg/: duty_cycle.msg
roboclaw/src/: RoboClaw.cpp  RoboClaw.h  pid.cpp  roboclaw_node.cpp  roboclaw_restart.cpp
scarab/: CMakeLists.txt
scarab/config/: hfn.yaml  scarab40.rviz  scarab41.rviz  scarab45.rviz  scarab_agent.rviz  servo_tilt.yaml
scarab/launch/: amcl.launch  diagnostic.launch  gazebo.launch  gmapping.launch  hfn.launch  host.launch  local_nav.launch  localization.launch  navigation.launch  openni2_tf_prefix.launch  rviz.launch  scarab.launch  scarab_sim.launch  servo.launch  slam.launch  system.launch  teleop.launch  vicon.launch  voxblox.launch
scarab/maps/: empty_map.yaml
scarab/rviz/: scarab40.rviz  scarab40_sim.rviz  scarab41.rviz  scarab42.rviz  scarab43.rviz  scarab44.rviz  scarab45.rviz  scarab46.rviz
scarab/scripts/: odom_to_tf.py
scarab/src/: camera_tf_broadcaster.py
scarab_description/urdf/: hexagons.urdf.xacro  kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  scarab.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_properties.urdf.xacro
scarab_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  hokuyo.gazebo  kinect.urdf.xacro
scarab_gazebo/: CMakeLists.txt  package.xml
scarab_gazebo/config/: gmapping.yaml
scarab_gazebo/launch/: new_scarab.launch  scarab.rviz  scarab_world.launch
scarab_gazebo/models/perch/: model.config  model.sdf
scarab_learning/simple_nav/: CMakeLists.txt
scarab_learning/simple_nav/scripts/: move_to_goal.py  vel_from_pose_template.py
scarab_msgs/: CMakeLists.txt
scarab_twist/: CMakeLists.txt  joystick.launch  package.xml
scarab_twist/launch/: sim_joystick.launch
scarab_twist/src/: joy_to_twist.cpp  key_to_duty_cycle.cpp  key_to_twist.cpp
simple_nav/: local_nav.launch  package.xml
simple_nav/scripts/: ananya.py  vel_from_pose.py  vel_from_pose_and_laser.py  vel_from_pose_laser.py  vel_from_pose_laser_1.py
tf_throttle/: CMakeLists.txt
