<?xml version="1.0"?>
<package>
  <name>laser_simulator</name>
  <version>0.0.0</version>
  <description>laser_simulator</description>
  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <author>Nathan Michael</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>armadillo</build_depend>
  <build_depend>cgal</build_depend>
  <!-- keys do not yet exist for these packages in the rosdep db:
  <build_depend>libnl-nf-3-dev</build_depend>
  <build_depend>libnl-route-3-dev</build_depend>
  -->

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
